--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ main {
 
 
 .container div {
-    width: 80%;
+    width: 100%;
     display: flex;
     min-height: 300px;
     align-items: center;
@@ -203,6 +203,7 @@ main {
     position: relative;
     z-index: 1;
     flex: 0 0 100%;
+    padding: 0 10px;
 }
 
 .hero-sec img {
@@ -346,7 +347,6 @@ section#products .product {
 
 .call-to-action button {
     font-size: 30px;
-    padding: 10px;
     
     background-color: rgb(255, 255 0);
     color: #fff;
@@ -422,6 +422,7 @@ footer .copyright {
         background-color: rgb(255, 255, 0);
         color: #000;
         width: auto;
+        padding: 10px;
     }
 
     .call-to-action span {
