--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ section#products .product {
 .call-to-action button {
     font-size: 30px;
     
-    background-color: rgb(255, 255 0);
+    background-color: rgb(255, 255, 0);
     color: #fff;
     cursor: pointer;
     width: 100%;
