--- a/style.css
+++ b/style.css
@@ -267,6 +267,7 @@ section#products {
 
 .products > .menu-heading {
     text-align: center;
+    position: absolute;
     display: block;
     width: 100%;
 }
@@ -275,13 +276,15 @@ h2.h1 {
     margin: 0 auto;
     top: 0;
     left: 0;
+    position: absolute;
 }
 
 .menu-heading p {
     margin: 20px auto;
     font-size: 1.2rem;
     width: 80%;
- 
+    position: absolute;
+    
 }
 
 
