--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ section#products .product {
 
 .call-to-action button {
     font-size: 30px;
-    
+    padding: 10px 0;
     background-color: rgb(255, 255, 0);
     color: #fff;
     cursor: pointer;
