--- a/style.css
+++ b/style.css
@@ -407,14 +407,8 @@ footer .copyright {
     }
 
     section#products .product {
-        min-width: 30%;
-        max-width: 40%;
+        width: 250px;
         
-    }
-
-    section#products .product:last-of-type {
-        position: relative;
-        right: 32%;
     }
 
     .call-to-action {
