--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ main {
     padding: 8px;
     border-radius: 5px;
     color: #fff;
-    width: 2.66em;
+    width: 40px;
     margin-top: 25px;
 }
 
@@ -242,7 +242,7 @@ main {
     content: '$18.00';
     display: block;
     position: absolute;
-    top: 90%;
+    top: 87%;
     left: 50%;
     font-size: 1.3rem;
     color: #fff;
@@ -284,7 +284,7 @@ h2.h1 {
     margin: 20px auto;
     font-size: 1.2rem;
     width: 80%;
-    
+    text-align: center;
 }
 
 
