--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ main {
     padding: 8px;
     border-radius: 5px;
     color: #fff;
-    width: 2.6em;
+    width: 2.4rem;
     margin-top: 25px;
 }
 
