--- a/style.css
+++ b/style.css
@@ -234,8 +234,9 @@ main {
     padding: 8px;
     border-radius: 5px;
     color: #fff;
-    width: 120px;
+    width: 60px;
     margin-top: 25px;
+    text-align: center;
 }
 
 .hero-sec h2:before {
